--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,11 @@ streamlit
 pandas
 numpy
 seaborn
+altair
+vega-datasets
+pandas
+google-api-python-client
+google-auth
+google-auth-httplib2
+protobuf
+click==8
